<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="srl.com.bd.srl.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="srl.com.bd.srl.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="srl.com.bd.srl.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_slideshows"
        android:name="srl.com.bd.srl.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_ourTeam"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="srl.com.bd.srl.ui.tools.ToolsFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="srl.com.bd.srl.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="srl.com.bd.srl.ui.send.SendFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_send" />
</navigation>